@@ -46,6 +46,8 @@
     <Compile Include="Migrations\20210614102255_Category_SubGroup_AddedToUniqueKeys.Designer.cs" />
     <Compile Include="Migrations\20210618075639_Category_Target_Translations.cs" />
     <Compile Include="Migrations\20210618075639_Category_Target_Translations.Designer.cs" />
+    <Compile Include="Migrations\20210719073718_Report_Refactoring.cs" />
+    <Compile Include="Migrations\20210719073718_Report_Refactoring.Designer.cs" />
     <Compile Include="Migrations\ErmesDbContextModelSnapshot.cs" />
     <Compile Include="Migrations\Seed\ModelBuilderExtensions.cs" />
   </ItemGroup>
