@@ -3,6 +3,7 @@ Ver.
 - Bugfix - Set default role for new users (#33)
 - Bugfix - Search filter case insensitive (#35)
 - Feature - AdultInfo prop added to ReportDto class (#15)
+- Feature - Report refactoring (migration added)(#37)
 
 Ver. 1.7.3 - 2021-07-01
 ---------------------------
